app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "variables";
@import "intro";
@import "project";
@import "footer";

// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
// Variables
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
html {
  font-size: 100%;
  height: 100%;
  overflow-x: hidden;
  margin: 0px;
  padding: 0px;
  touch-action: manipulation;
}

body {
  font-size: 16px;
  font-family: "Poppins", serif;
  width: 100%;
  height: 100%;
  margin: 0;
  font-weight: 400;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  word-wrap: break-word;
  color: #333;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
ul,
span,
li,
img,
inpot,
button {
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.5;
  font-weight: inherit;
}

h1,
h2,
h3 {
  font-family: "Poppins", cursive;
}

p {
  line-height: 1.6;
  font-size: 1.05em;
  font-weight: 400;
  color: #777;
}

h1 {
  font-size: 4em;
  line-height: 1;
}

h2 {
  font-size: 2.2em;
  line-height: 1.1;
}

h3 {
  font-size: 1.8em;
}

h4 {
  font-size: 1.3em;
}

h5 {
  font-size: 1em;
}

h6 {
  font-size: 0.9em;
  letter-spacing: 1px;
}

a,
button {
  display: inline-block;
  text-decoration: none;
  color: inherit;
  line-height: 1;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

a:focus,
a:active,
a:hover,
button:focus,
button:active,
button:hover,
a b.light-color:hover {
  text-decoration: none;
  color: $campbell-blue;
}

.active {
  color: $campbell-blue;
  font-weight: bold;
}

b {
  font-weight: 600;
}

img {
  width: 100%;
}

li {
  list-style: none;
  display: inline-block;
}

span {
  display: inline-block;
}

button {
  outline: 0;
  border: 0;
  background: none;
  cursor: pointer;
}

.icon {
  font-size: 1.1em;
  display: inline-block;
  line-height: inherit;
}

[class^="icon-"]:before,
[class*=" icon-"]:before {
  line-height: inherit;
}

b.max-bold {
  font-weight: 700;
}

.section {
  padding: 100px 0 50px;
}

.section .heading {
  margin-bottom: 60px;
}

.section .heading:before {
  content: "";
  height: 10px;
  width: 50px;
  border-radius: 5px;
  margin-bottom: 20px;
  display: block;
  background: $campbell-blue;
}

.focused-button {
  padding: 0;
  border: none;
  background: none;
  color: $campbell-lightblue;
  font-size: larger;
}

.focused-button:hover {
  padding: 0;
  border: none;
  background: none;
  color: $campbell-blue;
  font-size: larger;
  font-weight: bold;
}

.focused-button-danger {
  padding: 0;
  border: none;
  background: none;
  color: $campbell-lightred;
  font-size: larger;
}

.focused-button-danger:hover {
  padding: 0;
  border: none;
  background: none;
  color: $campbell-red;
  font-size: larger;
  font-weight: bold;
}

.focused-link {
  color: $campbell-lightblue;
}

.focused-link:hover {
  font-weight: bold;
}

.focused-link-success {
  color: $campbell-lightgreen;
}

.focused-link-success:hover {
  color: $campbell-green;
  font-weight: bold;
}

.focused-link-warning {
  color: $campbell-lightorange;
}

.focused-link-warning:hover {
  color: $campbell-orange;
  font-weight: bold;
}

.focused-link-danger {
  color: $campbell-lightred;
}

.focused-link-danger:hover {
  color: $campbell-red;
  font-weight: bold;
}

.margin-t-10 {
  margin-top: 10px;
}

.margin-b-30 {
  margin-bottom: 30px;
}

.margin-b-50 {
  margin-bottom: 50px;
}

.margin-tb-10 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.margin-tb-30 {
  margin-top: 30px;
  margin-bottom: 30px;
}

.font-blue {
  color: $campbell-blue;
  font-weight: bold;
}

.font-red {
  color: $campbell-red;
  font-weight: bold;
}

.font-lightblue {
  color: $campbell-lightblue;
  font-weight: bold;
}

.font-semi-white {
  color: #ddd;
}

.font-lite-black {
  color: #999;
}

.qualification-heading {
  padding: 1rem;
}

@media (min-width: 320px) and (max-width: 1025px) {
  .section {
    padding: 3rem 0 3rem;
  }

  .container {
    max-width: 90%;
  }
}

